nessus/k8s/calico/netbios-egress.yaml

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-netbios-nessus-egress
spec:
  selector: network == 'nessus'
  applyOnForward: true
  types:
  - Egress
  egress:
  # Allow netbios
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 139
