nessus/k8s/calico/smb-egress-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-smb-nessus-egress
spec:
  selector: network == 'nessus'
  applyOnForward: true
  types:
  - Egress
  egress:
  # Allow SMB
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 445
