nessus/k8s/calico/webconsole-policy.yaml
apiVersion: crd.projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-web-access
spec:
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: module == 'nessus'
    destination:
      ports:
      - 443
      - 8834
